--- a/Project_CuisineDelight/Project_CuisineDelight/Content/bootstrap.css
+++ b/Project_CuisineDelight/Project_CuisineDelight/Content/bootstrap.css
@@ -1673,6 +1673,8 @@ pre code {
   min-height: 1px;
   padding-right: 15px;
   padding-left: 15px;
+    top: -139px;
+    left: 0px;
 }
 .col-xs-1,
 .col-xs-2,
