--- a/Project_CuisineDelight/Project_CuisineDelight/Master/FrontEnd.Master
+++ b/Project_CuisineDelight/Project_CuisineDelight/Master/FrontEnd.Master
@@ -11,11 +11,11 @@
     <link href="../Style/Front-End.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-     <main>
-          <nav class="navbar navbar-inverse navbar-fixed-top">
+     <main >
+          <nav class="navbar navbar-inverse navbar-fixed-top" style="font-size:large">
            <div class="container-fluid">  
                     <div class="navbar-header">  
-                       <a class="navbar-brand" runat="server" href="~/Default.aspx"><span style="color:#a852c6">Cuisine</span><span style="color:#33cee1">Delight</span></a>
+                       <a class="navbar-brand" runat="server" href="~/Default.aspx"><span style="color:#a852c6; font-size:xx-large">Cuisine</span><span style="color:#33cee1; font-size:xx-large">Delight</span></a>
                     </div>                  
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/Default.aspx">Home</a></li>
