--- a/Project_CuisineDelight/Project_CuisineDelight/Content/bootstrap.css
+++ b/Project_CuisineDelight/Project_CuisineDelight/Content/bootstrap.css
@@ -1672,9 +1672,7 @@ pre code {
   position: relative;
   min-height: 1px;
   padding-right: 15px;
-  padding-left: 15px;
-    top: -139px;
-    left: 0px;
+  padding-left: 15px
 }
 .col-xs-1,
 .col-xs-2,
