--- a/Project_CuisineDelight/Project_CuisineDelight/Master/FrontEnd.Master
+++ b/Project_CuisineDelight/Project_CuisineDelight/Master/FrontEnd.Master
@@ -22,7 +22,7 @@
                         <li><a runat="server" href="~/Default.aspx">Home</a></li>
                         <li><a runat="server" href="~/About.aspx">About Us</a></li>
                         <li><a runat="server" href="~/FAQ.aspx">FAQ</a></li>
-                        <li><a runat="server" href="~/Caterer.aspx">Caterers</a></li>
+                        <li><a runat="server" href="~/Caterer/Caterer.aspx">Caterers</a></li>
                         <li><a runat="server" href="~/Food.aspx">Food</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right" id="login-signup">
@@ -33,7 +33,7 @@
                             </AnonymousTemplate>
                             <LoggedInTemplate>
                                   <li><a runat="server" href="~/ShoppingCart.aspx"><span class="glyphicon glyphicon-shopping-cart"></span> Shopping Cart</a></li>
-                                 <li><a runat="server" href="~/UserProfile.aspx"><span class="glyphicon glyphicon-user"></span><asp:LoginName ID="LoginName1" runat="server" FormatString=" {0}" /></a></li>                               
+                                 <li><a runat="server" href="~/Customer/UserProfile.aspx"><span class="glyphicon glyphicon-user"></span><asp:LoginName ID="LoginName1" runat="server" FormatString=" {0}" /></a></li>                               
                                   <li><a id="AnchorButton" onserverclick="Logout" runat="server">Logout</a></li> 
                                                         
                             </LoggedInTemplate>
@@ -63,10 +63,10 @@
                                 <div class="col-md-5">
                                    <ul class="nav navbar-nav sc-center">
                                        <li><a runat="server" href="~/Default.aspx"><span style="color:#a852c6">Cuisine</span><span style="color:#33cee1">Delight</span> </a></li>                                      
-                                       <li><i class="fa fa-twitter" style="font-size:30px;color:cornflowerblue;margin-left: 2px;margin-top:8px"></i></li> 
-                                       <li><i class="fa fa-facebook-official" style="font-size:30px;color:deepskyblue;margin-left: 2px;margin-top:8px"></i></li>
-                                       <li><i class="fa fa-instagram" style="font-size:30px;color:deeppink;margin-left: 2px;margin-top:8px"></i></li>
-                                       <li><i class="fa fa-whatsapp" style="font-size:30px;color:lawngreen;margin-left: 2px;margin-top:8px"></i></li>
+                                       <li><i class="fa fa-twitter" style="font-size:20px;color:cornflowerblue;margin-left:2px;margin-right:2px;margin-top:15px"></i></li> 
+                                       <li><i class="fa fa-facebook-official" style="font-size:20px;color:deepskyblue;margin-left:2px;margin-right:2px;margin-top:15px"></i></li>
+                                       <li><i class="fa fa-instagram" style="font-size:20px;color:deeppink;margin-left:2px;margin-right:2px;margin-top:15px"></i></li>
+                                       <li><i class="fa fa-whatsapp" style="font-size:20px;color:lawngreen;margin-left:2px;margin-right:2px;margin-top:15px"></i></li>
                                        </ul>
                                 </div>
                            
