--- a/Project_CuisineDelight/Project_CuisineDelight/Master/FrontEnd.Master
+++ b/Project_CuisineDelight/Project_CuisineDelight/Master/FrontEnd.Master
@@ -11,7 +11,7 @@
     <link href="../Content/bootstrap.css" rel="stylesheet" type="text/css" />  
     
 </head>
-<body>
+<body style="font-size: large;" font-family: 'Arial Rounded MT Bold';">
      <main >
           <nav class="navbar navbar-inverse navbar-fixed-top" style="font-size:large">
            <div class="container-fluid">  
@@ -22,8 +22,9 @@
                         <li><a runat="server" href="~/Default.aspx">Home</a></li>
                         <li><a runat="server" href="~/About.aspx">About Us</a></li>
                         <li><a runat="server" href="~/FAQ.aspx">FAQ</a></li>
-                        <li><a runat="server" href="~/Caterer/Caterer.aspx">Caterers</a></li>
+                        <li><a runat="server" href="~/Caterer.aspx">Caterers</a></li>
                         <li><a runat="server" href="~/Food.aspx">Food</a></li>
+                         <li><a runat="server" href="~/CatererFolder/CatererMenu.aspx">Menu</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right" id="login-signup">
                         <asp:LoginView ID="LoginView1" runat="server">
@@ -47,7 +48,7 @@
                              
              </div>  
          </nav> 
-        <form id="form1" runat="server" style="margin-top:3.5em; margin-bottom:6em">
+        <form id="form1" runat="server" style="margin-top:2.9em; margin-bottom:6em">
             <div>             
                 <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
                 </asp:ContentPlaceHolder>
