--- a/Project_CuisineDelight/Project_CuisineDelight/Master/FrontEnd.Master
+++ b/Project_CuisineDelight/Project_CuisineDelight/Master/FrontEnd.Master
@@ -29,7 +29,7 @@
                     <ul class="nav navbar-nav navbar-right" id="login-signup">
                         <asp:LoginView ID="LoginView1" runat="server">
                             <AnonymousTemplate>
-                                 <li><a runat="server" href="~/SignUp.aspx"><span class="glyphicon glyphicon-user"></span> Signup</a></li>
+                                 <li><a runat="server" href="~/SignupSelectionAsCustomerORCaterer.aspx"><span class="glyphicon glyphicon-user"></span> Signup</a></li>
                                  <li><a runat="server" href="~/Login.aspx"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>   
                             </AnonymousTemplate>
                             <LoggedInTemplate>
