--- a/Project_CuisineDelight/Project_CuisineDelight/Master/FrontEnd.Master
+++ b/Project_CuisineDelight/Project_CuisineDelight/Master/FrontEnd.Master
@@ -42,7 +42,7 @@
                                         
                     </ul> 
                     <form class="navbar-form navbar-right">
-                        <input  type="search" placeholder="Search" aria-label="Search">
+                        <input  type="search" placeholder="Search your food" aria-label="Search">
                         <button type="submit">Search</button>
                     </form>
                              
