--- a/Project_CuisineDelight/Project_CuisineDelight/Master/FrontEnd.Master
+++ b/Project_CuisineDelight/Project_CuisineDelight/Master/FrontEnd.Master
@@ -32,9 +32,9 @@
                         <li> <asp:LinkButton ID="LinkButton10" class="navbar-link footerlinks" runat="server" OnClick="LinkButton10_Click">Menu</asp:LinkButton></li>
                         <li> <asp:LinkButton ID="LinkButton13" class="navbar-link footerlinks" runat="server" OnClick="LinkButton13_Click">My Orders</asp:LinkButton></li>
                         <li> <asp:LinkButton ID="LinkButton14" class="navbar-link footerlinks" runat="server" OnClick="LinkButton14_Click">Orders</asp:LinkButton></li>
-                        <li> <asp:LinkButton ID="LinkButton17" class="navbar-link footerlinks" runat="server" OnClick="LinkButton17_Click" Visible="False">Caterer Profile</asp:LinkButton></li>
-                        <li> <asp:LinkButton ID="LinkButton18" class="navbar-link footerlinks" runat="server" OnClick="LinkButton18_Click" Visible="False">Customer Profile</asp:LinkButton></li>
-                        <li> <asp:LinkButton ID="LinkButton15" class="navbar-link footerlinks" runat="server" OnClick="LinkButton15_Click" Visible="False"><span class="glyphicon glyphicon-shopping-cart"></span> Shopping Cart</asp:LinkButton></li>
+                        <li> <asp:LinkButton ID="LinkButton17" class="navbar-link footerlinks" runat="server" OnClick="LinkButton17_Click" Visible="False"><span class="glyphicon glyphicon-user"></span>Profile</asp:LinkButton></li>
+                        <li> <asp:LinkButton ID="LinkButton18" class="navbar-link footerlinks" runat="server" OnClick="LinkButton18_Click" Visible="False"><span class="glyphicon glyphicon-user"></span>Profile</asp:LinkButton></li>
+                        <li> <asp:LinkButton ID="LinkButton15" class="navbar-link footerlinks" runat="server" OnClick="LinkButton15_Click" Visible="False"><span class="glyphicon glyphicon-shopping-cart"></span>Cart</asp:LinkButton></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right" id="login-signup">
                         <asp:LoginView ID="LoginView1" runat="server">
@@ -43,8 +43,7 @@
                                  <li><a runat="server" href="~/LoginSelectionAsCatereorCustomer.aspx"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
                             </AnonymousTemplate>
                             <LoggedInTemplate>
-                                <li> <%--<asp:LinkButton ID="LinkButton11" class="navbar-link footerlinks" runat="server" OnClick="LinkButton11_Click" Visible="False"><span class="glyphicon glyphicon-shopping-cart"></span> Shopping Cart</asp:LinkButton>--%></li>
-                                <li> <asp:LinkButton ID="LinkButton12" class="navbar-link footerlinks" runat="server" OnClick="LinkButton12_Click"><span class="glyphicon glyphicon-user"></span><asp:LoginName ID="LoginName1" runat="server" FormatString=" {0}" /></asp:LinkButton></li>       
+                                <li> <asp:LinkButton ID="LinkButton12" class="navbar-link footerlinks" runat="server"><asp:LoginName ID="LoginName1" runat="server" FormatString=" {0}" /></asp:LinkButton></li>       
                                   <li><a id="AnchorButton" onserverclick="Logout" runat="server">Logout</a></li> 
                                                         
                             </LoggedInTemplate>
